# Eventum

./: Anchor.toml  README.md  airdrop.txt  package-lock.json  package.json
programs/eventum/: Cargo.toml
programs/eventum/src/: error.rs  lib.rs
programs/eventum/src/instructions/: add_liquidity.rs  buy_outcomes.rs  claim_winnings.rs  initialize_market.rs  mod.rs  resolve_market.rs
programs/eventum/src/states/: initialize_market.rs  market.rs  mod.rs
tests/: eventum.ts
ui-vite/: package-lock.json  package.json  vite.config.ts
ui-vite/src/: App.tsx  eventum_idl.json  main.tsx  useEventumProgram.ts
ui-vite/src/components/: AddLiquidityButton.tsx  BuyOutcome.tsx  InitializeMarketButton.tsx
